# Hubs-Game-Manager

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  generate.sh  lerna.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
cmake/: gamehub-manager-config.cmake.in
proto/: build.sh  collection.service.proto  customer.service.proto  game.service.proto  game_variant.service.proto  provider.service.proto
src/: Collection.serviceServiceClientPb.ts  Game.serviceServiceClientPb.ts  Game_variant.serviceServiceClientPb.ts  Provider.serviceServiceClientPb.ts  collection.service_pb.d.ts  collection.service_pb.js  game.service_pb.d.ts  game.service_pb.js  game_variant.service_pb.d.ts  game_variant.service_pb.js  provider.service_pb.d.ts  provider.service_pb.js
